styles.css
/*　|| Resets */

html {
    box-sizing: border-box;
    font-family: 'Plus Jakarta Sans', sans-serif;
    overflow-x: hidden;
}

*, *:before, *:after {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

/* || General */

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1;
    display: flex;
    flex-direction: column;
    max-width: 100vw;
}

.nowrap {
    white-space: nowrap;
}

/* || Buttons */

.get-started-button {
    font-weight: 700;
    border: none;
    line-height: 1.75rem;
    cursor: pointer;
}

.pill-button {
    border-radius: 1.75rem;
    padding: 0.5625rem 1.5rem 0.6875rem 1.5rem;
}

.button-overlay {
    position: relative;
    border-radius: 1.75rem;
    overflow: hidden;
    width: fit-content;
    height: fit-content;
}

.button-overlay:hover:after
{
    content: '';
    position: absolute;
    top: 0; bottom: 0;
    left: 0; right: 0;
    background-color: #FFFFFF;
    opacity: 50%;
    cursor: pointer;
}

.dark-button {
    color: #FFFFFF;
    background-color: #13183F;
}

.dark-button:hover {
    background-color: #666CA3;
}

.cool-gradient {
    color: #FFFFFF;
    background-color: #4851FF; /* for browsers that don't support gradient */
    background: linear-gradient(#4851FF, #F02AA6);
}

.warm-gradient {
    color: #FFFFFF;
    background-color: #FF6F48; /* for browsers that don't support gradient */
    background: linear-gradient(#FF6F48, #F02AA6);
}

.intro__button-container {
    margin-top: 1.5rem;
}

.tile__button {
    color: #F74780;
    background-color: #FFFFFF;
    font-size: 1.125rem;
    margin: 1.5rem 0 2rem 0;
}

.tile__button:hover {
    color: #FFA7C3;
}

/* || Header and Footer */

header,
footer {
    display: flex;
    justify-content: space-between;
}

header {
    padding: 1rem 1rem 0 1rem;
}

footer {
    background-color: #13183F;
    padding: 2.25rem 1rem 2.25rem 1rem;
    display: flex;
    align-items: center;
}

.brand-name {
    font-size: 1.75rem;
    font-weight: 800;
    color: #13183F;
}

.brand-name--white {
    color: #FFFFFF;
}

/* || Intro */

.intro__heading {
    margin: 0;
    font-size: 2.5rem;
    font-weight: 800;
    margin-top: 2.375rem;
}

.intro {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 0 1rem;
}

.intro__description {
    margin-top: 1.625rem;
    line-height: 1.625rem;
    font-weight: 500;
    color: #83869A;
}

.intro__img-container {
    margin-top: 2.875rem;
    overflow: clip;
}

.intro__img {
    max-width: 100vw;
    transform: scale(1.15);
}

/* || Course Tiles */

.tiles-group {
    display: flex;
    flex-wrap: wrap;
    background-color: #FFFFFF; /* for browsers that don't support gradient */
    background: linear-gradient(#FFFFFF, #F0F1FF);
    flex: 1;
    padding: 0 1rem 3.75rem 1rem;
}

.tiles-group__heading-container {
    display: flex;
    padding: 1.5rem 1.75rem 2rem 1.75rem;
    border-radius: 0.625rem;
}

.tiles-group__heading {
    color: #FFFFFF;
    line-height: 2rem;
    align-self: center;
}

.tile {
    margin-top: 2.5rem;
    background-color: #FFFFFF;
    padding: 0 1.75rem;
    border-radius: 0.625rem;
    position: relative;
    flex-grow: 1;
}

.tile__img {
    width: 3.5rem;
    height: 3.5rem;
    position: absolute;
    top: -1.5rem;
}

.tile__title {
    font-size: 1.25rem;
    font-weight: 800;
    margin-top: 3.5rem;
}

.tile__description {
    font-weight: 500;
    color: #83869A;
    margin-top: 1rem;
}

/* 
    || TABLET 
*/

@media (min-width: 768px) and (max-width: 1439px) {

    header {
        padding: 1.5rem 2.375rem 0 2.375rem;
    }

    footer {
        padding: 2.25rem 2.5rem 2.25rem 2.5rem;
    }

    .intro {
        padding-left: 2.375rem;
    }

    .intro__heading {
        margin-top: 6.1875rem;
    }

    .intro__text-container {
        flex: 55%;
        overflow: auto;
    }

    .intro__img-container {
        flex: 45%;
    }

    .intro__img {
        position: absolute;
        top: -3rem;
        right: -17rem;
        max-width: 80vw;
    }

    .tiles-group {
        column-gap: 0.6875rem;
        padding: 0 2.5rem 5.375rem 2.5rem;
        margin-top: 11.625rem;
    }

    .tiles-group__heading-container {
        flex: 0 0 calc(50% - 0.6875rem);
        margin: 2rem 0 0 0;
    }

    .tiles-group__heading {
        align-self: flex-start;
        padding-top: 3.5rem;
    }

    .tile {
        flex: 0 0 calc(50% - 0.6875rem);
        margin-top: 3.5rem;
    }

    .tile__title {
        margin-top: 3.5rem;
    }   
}

